--- a/microserver/www/index.html
+++ b/microserver/www/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang=fr>
+<html lang=en>
 
 	<head>
 		<meta charset="UTF-8" />
@@ -9,10 +9,10 @@
 	</head>
 
 	<body>
-		<h1>Page de test MicroWebSrv</h1>
+		<h1>This is the MicroWebSrv Test page</h1>
 		<h2>Hello !</h2>
 		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eget ligula quis libero mollis dapibus. Suspendisse potenti. Nullam facilisis neque et sem. Proin placerat adipiscing urna. Aenean sollicitudin. Mauris lorem erat, fringilla quis, sagittis a, varius sed, nunc. Pellentesque ligula. Nullam egestas eleifend turpis. Vivamus ac sapien. Sed venenatis, ligula ut scelerisque vehicula, erat tellus euismod ipsum, eget faucibus tortor arcu et lectus. Vivamus vel purus. Fusce dignissim tortor quis diam elementum fermentum. Mauris eleifend lorem vel arcu. Vivamus tempus faucibus lectus. Curabitur volutpat ornare mi. Curabitur ac libero. Sed eu elit ac metus egestas iaculis.
+			If you can read this it appears you managed to get the MicroWebSrv up and running on your device.
 		</p>
 		<br />
 		<hr />
