--- a/microserver/www/index.html
+++ b/microserver/www/index.html
@@ -4,23 +4,38 @@
 
 	<head>
 		<meta charset="UTF-8" />
-		<title>Page de test MicroWebSrv</title>
+		<title>Welcome to the MicroWebSrv</title>
 		<link rel="stylesheet" href="style.css" />
 	</head>
 
 	<body>
 		<h1>This is the MicroWebSrv Test page</h1>
-		<h2>Hello !</h2>
+		<h2>Welcome and well done!</h2>
+                <div style="text-align: center">
 		<p>
-			If you can read this it appears you managed to get the MicroWebSrv up and running on your device.
+			If you can read this, you managed to get the MicroWebSrv up and running on your 			device.
+		<li>	
+    			How to use a tiny microcontroller with real sensors using
+			MicroPython.
+		</li>
+		<li>
+    			How to connect 'things' to the platform.
+		</li>
+		<li>
+    			A server side component that allows the ingestion of data.
+		</li>
+    		<li>
+			The web side, using web technologies like A-Frame, AR.js and awe.js for the purpose 				of having AR capabilities.
+		</li>
 		</p>
-		<br />
-		<hr />
-		<br />
+		</div>
 		<div style="text-align: center">
-			<img src="pdf.png" />
+			<img src="Mlogo_138bl.png" />
 			<p>
-				Afficher « <a href="test.pdf">un fichier PDF</a> »
+			<a href="https://github.com/SamsungResearchUK-IoT-Meetup/multimode_sensor_platform/wiki">Getting Started with the Workshop </a>
+			</p>
+			<p>
+			<a href="https://github.com/SamsungResearchUK-IoT-Meetup/multimode_sensor_platform/wiki">Wiki</a>
 			</p>
 		</div>
 	</body>
