Adding debug print statements and doc strings to the microwebserver code base

--- a/microserver/www/index.html
+++ b/microserver/www/index.html
@@ -1,28 +1,15 @@
 <!DOCTYPE html>
-
-<html lang=fr>
-
-	<head>
-		<meta charset="UTF-8" />
-		<title>Page de test MicroWebSrv</title>
-		<link rel="stylesheet" href="style.css" />
-	</head>
-
-	<body>
-		<h1>Page de test MicroWebSrv</h1>
-		<h2>Hello !</h2>
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eget ligula quis libero mollis dapibus. Suspendisse potenti. Nullam facilisis neque et sem. Proin placerat adipiscing urna. Aenean sollicitudin. Mauris lorem erat, fringilla quis, sagittis a, varius sed, nunc. Pellentesque ligula. Nullam egestas eleifend turpis. Vivamus ac sapien. Sed venenatis, ligula ut scelerisque vehicula, erat tellus euismod ipsum, eget faucibus tortor arcu et lectus. Vivamus vel purus. Fusce dignissim tortor quis diam elementum fermentum. Mauris eleifend lorem vel arcu. Vivamus tempus faucibus lectus. Curabitur volutpat ornare mi. Curabitur ac libero. Sed eu elit ac metus egestas iaculis.
-		</p>
-		<br />
-		<hr />
-		<br />
-		<div style="text-align: center">
-			<img src="pdf.png" />
-			<p>
-				Afficher « <a href="test.pdf">un fichier PDF</a> »
-			</p>
-		</div>
-	</body>
-
+<html lang="en">
+    <head>
+        <title>Progressive Web Apps</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="/style.css">
+    </head>
+    <body>
+			<h1>Page 1</h1>
+      <img src="/thumb.png">
+      <p>Nullam quis risus eget urna mollis ornare vel eu leo. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Donec sed odio dui. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    </body>
+    <script src="/main.js"></script>
 </html>
