--- a/microserver/www/ARindex-Micropython.html
+++ b/microserver/www/ARindex-Micropython.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<script src="aframe/aframe.min2.js"></script>
-<script src="aframe/aframe-ar.js"></script>
+<!--<script src="aframe/aframe.min2.js"></script>-->
+<!--<script src="aframe/aframe-ar.js"></script>-->
+
+<script src="https://raw.githack.com/SamsungResearchUK-IoT-Meetup/multimode_sensor_platform/ISSU15-no-augmented-reality-page/assets/AR/aframe.min2.js"></script>
+<script src="https://raw.githack.com/SamsungResearchUK-IoT-Meetup/multimode_sensor_platform/ISSU15-no-augmented-reality-page/assets/AR/aframe-ar.js"></script>
 
 <a-scene embedded arjs = 'trackingMethod: best;'>
     <a-anchor hit-testing-enabled="true">
