--- a/microserver/www/ARindex.html
+++ b/microserver/www/ARindex.html
@@ -6,45 +6,51 @@
 <script src="https://raw.githack.com/SamsungResearchUK-IoT-Meetup/multimode_sensor_platform/ISSU15-no-augmented-reality-page/assets/AR/aframe.min2.js"></script>
 <script src="https://raw.githack.com/SamsungResearchUK-IoT-Meetup/multimode_sensor_platform/ISSU15-no-augmented-reality-page/assets/AR/aframe-ar.js"></script>
 
-<a-scene embedded arjs = 'trackingMethod: best;'>
-    <a-anchor hit-testing-enabled="true">
-        <a-torus position="0 0.5 0" color="green" radius="0.5">
-            <a-animation attribute="color"
-                         dur = "10000"
-                         from = "green"
-                         to = "red"
-                         repeat = "indefinite">
-            </a-animation>
-        </a-torus>
-        <a-plane src="https://raw.githubusercontent.com/aframevr/sample-assets/master/assets/images/illustration/758px-Canestra_di_frutta_(Caravaggio).jpg"
-                 width="3.5"
-                 height="3.5"
-                 rotation="-55 0 0 "
-                 position="0 -1 0"
-                 color="purple">
-        </a-plane>
-        <a-cylinder color="yellow" height="2" radius="0.05" position="0 0 0 "></a-cylinder>
-        <a-cylinder color="blue" height="2" radius="0.05" position="1 0 0"></a-cylinder>
-        <a-torus-knot color="orange" radius="0.5" position="1 0.5 0">
-            <a-animation attribute="rotation"
-                         dur = "10000"
-                         fill = "forward"
-                         to = "0 0 360"
-                         repeat = "indefinite">
+    <a-scene embedded arjs = 'trackingMethod: best;'>
+        <a-anchor hit-testing-enabled="true">
+            <a-plane src="samsung.png"
+                     opacity=""0.5"
+                     width="5"
+                     height="5"
+                      rotation="-90 0 0 "
+                     position="0 -5 -5"
+                     color="white">
 
-            </a-animation>
-        </a-torus-knot>
+            </a-plane>
 
-        <a-plane src="https://raw.githubusercontent.com/aframevr/sample-assets/master/assets/images/uvgrid/UV_Grid_Sm.jpg"
-                 width="2.5"
-                 height="1.5"
-                 position="0 1 -1">
-
-        </a-plane>
-        <a-text value="Welcome To The Fun House" color="black" width="3" position="-1 0.5 -1"></a-text>
-    </a-anchor>
-    <a-camera-static/>
-
-</a-scene>
+            <a-plane src=""
+                     opacity="0.4"
+                     color="white"
+                     width="5"
+                     height="4"
+                     position="0 -4 -6.5">
+            <a-text color="#222222" align="left" baseline="top" width="8" position="-2 1.8 0.1" font="aileronsemibold"
+                    value="Samsung Multimode Sensor"
+                    text="">
+            </a-text>
+            <a-text color="#222222" align="left" baseline="top" width="6" position="-2 1.4 0.1" font="aileronsemibold"
+                    value="Temperature value: N/A"
+                    text="">
+            </a-text>
+            <a-text color="#222222" align="left" baseline="top" width="6" position="-2 1.1 0.1" font="aileronsemibold"
+                    value="Humidity value: N/A"
+                    text="">
+            </a-text>
+            <a-text color="#222222" align="left" baseline="top" width="6" position="-2 0.8 0.1" font="aileronsemibold"
+                    value="LUX value: N/A"
+                    text="">
+            </a-text>
+            <a-text color="#222222" align="left" baseline="top" width="6" position="-2 0.5 0.1" font="aileronsemibold"
+                    value="PIR detection events: N/A"
+                    text="">
+            </a-text>
+            <a-text color="#222222" align="left" baseline="top" width="6" position="-2 0.2 0.1" font="aileronsemibold"
+                    value="Doppler radar detection events: N/A"
+                    text="">
+            </a-text>
+            </a-plane>
+        </a-anchor>
+        <a-camera-static/>
+    </a-scene>
 </html>
 
