adding contributers for project, links to other pages that are active, and tidy the HTML file

--- a/microserver/www/index.html
+++ b/microserver/www/index.html
@@ -8,35 +8,36 @@
 	</head>
 
 	<body>
-		<h1>This is the Samsung MicroWebSrv Test page</h1>
-		<img src="samsung.png" class="center" />
+		<h1>This is the MicroWebSrv Test page</h1>
 		<h2>Welcome and well done!</h2>
-		<div style="text-align: center">
-			<p>
-				If you can read this, you managed to get the MicroWebSrv up and running on your device.
-			<li>
-					How to use a tiny microcontroller with real sensors using
-				MicroPython.
-			</li>
-			<li>
-					How to connect 'things' to the platform.
-			</li>
-			<li>
-					A server side component that allows the ingestion of data.
-			</li>
-				<li>
-				The web side, using web technologies like A-Frame, AR.js and awe.js for the purpose of having AR capabilities.
-			</li>
-			</p>
+			<div style="text-align: center">
+				<p> If you can read this, you managed to get the MicroWebSrv up and running on your device. </p>
+				<p> The micro web server and drivers in this repo show you:</p>
+				<ul>
+					<li> How to use a tiny microcontroller with real sensors using MicroPython. </li>
+					<li> How to connect 'things' to the platform. </li>
+					<li> The web side, using web technologies like A-Frame and AR.js for the purpose of having AR capabilities.</li>
+				</ul>
+				<p> Status of the micropython board is on the <a href="/status">status page</a> </p>
+				<p> Sensors and sensor information can be viewed on the <a href="/sensors">sensors page</a> </p>
+				<p> To see Augmented Reality first ensure you are viewing this over a HTTPS connection</p>
+				<p> Then navigate to the <a href="/AR">AR page</a> </p>
+
 		</div>
 		<div style="text-align: center">
 			<img src="Mlogo_138bl.png" />
 			<p>
-				<a href="https://github.com/SamsungResearchUK-IoT-Meetup/multimode_sensor_platform/wiki">Getting Started with the Workshop </a>
+				<a href="https://github.com/SamsungResearchUK-IoT-Meetup/multimode_sensor_platform/wiki/PyCon-DE-Micropython-Workshop-2019">Getting Started with the Workshop </a>
 			</p>
 			<p>
 				<a href="https://github.com/SamsungResearchUK-IoT-Meetup/multimode_sensor_platform/wiki">Wiki</a>
 			</p>
+			<p> This project could not have been done without the help or open source work from the following people</p>
+			<ul>
+				<li><i>Christine Spindler</i></li>
+				<li><i>Damian George</i></li>
+				<li><i>Jean-Christophe Bos</i></li>
+			</ul>
 		</div>
 	</body>
 </html>
