adding attributers, and links to help people. Fixing indentation. Adding <UL> to <li> elements.

--- a/microserver/www/index.html
+++ b/microserver/www/index.html
@@ -9,6 +9,7 @@
 
 	<body>
 		<h1>This is the MicroWebSrv Test page</h1>
+		<img src="samsung.png" class="center" />
 		<h2>Welcome and well done!</h2>
 			<div style="text-align: center">
 				<p> If you can read this, you managed to get the MicroWebSrv up and running on your device. </p>
@@ -32,12 +33,13 @@
 			<p>
 				<a href="https://github.com/SamsungResearchUK-IoT-Meetup/multimode_sensor_platform/wiki">Wiki</a>
 			</p>
+		</div>
 			<p> This project could not have been done without the help or open source work from the following people</p>
 			<ul>
 				<li><i>Christine Spindler</i></li>
 				<li><i>Damian George</i></li>
 				<li><i>Jean-Christophe Bos</i></li>
 			</ul>
-		</div>
+		
 	</body>
 </html>
